--- a/index.html
+++ b/index.html
@@ -27,20 +27,17 @@
 
         <section>
             <div class="row">
-                <div class="col-md-1 col-2">
+                <div class="col-md-3 col">
                 <a href="https://discordapp.com/users/219354539357110273" target="_blank"><i class="fab fa-discord fa-3x" aria-hidden="true"></i></a>
                 </div>
-                <div class="col-md-1 col-2">
+                <div class="col-md-3 col">
                 <a href="https://www.linkedin.com/in/anabastos8" target="_blank"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
                 </div>
-                <div class="col-md-1 col-2">
+                <div class="col-md-3 col">
                 <a href="https://www.github.com/ebetcel" target="_blank"><i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>
                 </div>
-                <div class="col-md-1 col-2"> 
+                <div class="col-md-3 col"> 
                 <a href="https://telegram.me/ebetcel" target="_blank"><i class="fab fa-telegram fa-3x" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-md-1 col-2">
-                <a href="https://medium.com/@analuizabastos" target="_blank"><i class="fab fa-medium fa-3x" aria-hidden="true"></i></a>
                 </div>
             <div>
         </section>
